<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="player.comet.tesla.ghostanimalplayer.AboutUsActivity"
    android:background="#4e2df2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/appreciate1"
                android:id="@+id/notImportantId1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/appreciate2"
                android:id="@+id/notImportantId2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/appreciate3"
                android:id="@+id/notImportantId3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/welcome_to_click_these"
                android:id="@+id/notImportantId4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF3628BA"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/website"
                android:id="@+id/studioWebsite"
                android:linksClickable="true"
                android:onClick="viewWeb"
                android:textColorHighlight="#883199" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/teacher_blog"
                android:textColor="#FF3628BA"
                android:id="@+id/teacherBlog"
                android:linksClickable="true"
                android:onClick="viewWeb"
                android:textColorHighlight="#883199" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/b_station"
                android:textColor="#FF3628BA"
                android:id="@+id/bStation"
                android:linksClickable="true"
                android:onClick="viewWeb"
                android:textColorHighlight="#883199" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
