<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/rename" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/rename"
            android:layout_weight="1"  />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#000000"
            android:text="@string/save"
            android:gravity="center"
            android:onClick="save"
            android:background="@drawable/button_on_click1"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/cancel"
            android:textColor="#000000"
            android:onClick="cancel"
            android:gravity="center"
            android:background="@drawable/button_on_click1"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/delete"
        android:textColor="#000000"
        android:layout_gravity="center"
        android:gravity="center"
        android:onClick="deleteButNotSure"
        android:background="@drawable/button_on_click1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ask_again"
        android:id="@+id/SureText"
        android:visibility="gone"
        tools:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/sure"
            android:id="@+id/SureButton"
            android:visibility="gone"
            tools:visibility="visible"
            android:textColor="#000000"
            android:onClick="delete"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@drawable/button_on_click1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/cancel"
            android:id="@+id/CancelButton"
            android:visibility="gone"
            tools:visibility="visible"
            android:textColor="#000000"
            android:onClick="cancel"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@drawable/button_on_click1"/>
    </LinearLayout>
</LinearLayout>